prepare for submission.

--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,8 @@
+# Change in 0.99.0
+
+  o Update the DESCRIPTION.
+  o Update documentation of enhancers and saveAlignments
+
 # Change in 0.1.2
+
   o drop ENCODExplorer.
