--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 # Change in 0.99.7
 
+  o Change sprintf to snprintf for Muscle/typetostr.cpp:14:22.
+
+# Change in 0.99.7
+
   o Remove functions contain fgets.
 
 # Change in 0.99.6
