--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-# Change in 0.99.7
+# Change in 0.99.9
+
+  o fix the make error: 'logf' was not declared in this scope.
+
+# Change in 0.99.8
 
   o Change sprintf to snprintf for Muscle/typetostr.cpp:14:22.
 
