--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
-# Change in 0.99.9
+# Change in 0.99.12
+
+  o Update the documentation.
+  o Add motifConsensus argument for saveAlignments function.
+
+# Change in 0.99.11
+
+  o Fix typos in documentation.
+
+# Change in 0.99.10
 
   o Add Makevars.win file to clean .o files in src.
 
