Add searchTFBPS function

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -36,3 +36,9 @@
   author={Pages, H and Aboyoun, P and Gentleman, R and DebRoy, S},
   journal={R package version}
 }
+
+@article{schep2021package,
+  title={motifmatchr: Fast Motif Matching in R},
+  author={Schep A},
+  journal={R package version}
+}
