--- a/vignettes/enhancerHomologSearch.Rmd
+++ b/vignettes/enhancerHomologSearch.Rmd
@@ -19,7 +19,6 @@ output:
 ```{r, echo=FALSE, results="hide", warning=FALSE, message=FALSE}
 suppressPackageStartupMessages({
   library(enhancerHomologSearch)
-  library(BiocParallel)
   library(BSgenome.Drerio.UCSC.danRer10)
   library(BSgenome.Hsapiens.UCSC.hg38)
   library(BSgenome.Mmusculus.UCSC.mm10)
@@ -29,6 +28,7 @@ suppressPackageStartupMessages({
   library(org.Mm.eg.db)
   library(utils)
   library(MotifDb)
+  library(motifmatchr)
 })
 knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
@@ -66,8 +66,9 @@ script for researchers to quick search putative mammalian orthologs to enhancers
 The modified algorithm is:
 The candidate regions were determined by ENCODE histone marks (default is 
 H3K4me1) in specific tissue for human and mouse.
-The mapping score were calculated by pairwise alignment between enhancer sequences 
-and candidates by global sequence alignment[@pages2013package].
+The mapping score were calculated by pairwise Transcription Factors Binding
+Pattern Similarity (TFBPS) between enhancer sequences 
+and candidates by fast motif match[@schep2021package].
 The Z-score were calculated from
 mapping score and then converted to P-value based on two-side test from a 
 normal distribution.
@@ -101,10 +102,12 @@ BiocManager::install(c("enhancerHomologSearch",
                        "TxDb.Hsapiens.UCSC.hg38.knownGene",
                        "TxDb.Mmusculus.UCSC.mm10.knownGene",
                        "org.Hs.eg.db",
-                       "org.Mm.eg.db"))
+                       "org.Mm.eg.db",
+                       "MotifDb",
+                       "motifmatchr"))
 ```
 
-If you have trouble in install ribosomeProfilingQC, 
+If you have trouble in install enhancerHomologSearch, 
 please check your R version first. 
 The `enhancerHomologSearch` package require R >= 4.1.0.
 
@@ -148,10 +151,7 @@ This step is time consuming step. For quick run, users can subset the data
 by given genomic coordinates.
 ```{r}
 # subset the data for test run 
-# in human, the homolog HBEGF gene is located at chromosome 5
-# you can try to subset the data by chromosome 5
-gr <- as(seqinfo(Hsapiens), "GRanges")
-hs <- subsetByOverlaps(hs, gr[seqnames(gr)=="chr7"])
+# in human, the homolog LEP gene is located at chromosome 7
 # In this test run, we will only use upstream 1M and downstream 1M of homolog
 # gene
 library(TxDb.Hsapiens.UCSC.hg38.knownGene)
@@ -169,10 +169,7 @@ expandGR <- function(x, ext){
   GenomicRanges::trim(x)
 }
 hs <- subsetByOverlaps(hs, expandGR(g_hs, ext=1000000))
-# in mouse, the homolog Hbegf gene is located at chromosome 18
-# same as above script in human, you can try to subset the data by chromosome.
-gr <- as(seqinfo(Mmusculus), "GRanges")
-mm <- subsetByOverlaps(mm, gr[seqnames(gr)=="chr6"])
+# in mouse, the homolog Lep gene is located at chromosome 6
 # Here we use the subset of 1M upstream and downstream of homolog gene.
 library(TxDb.Mmusculus.UCSC.mm10.knownGene)
 library(org.Mm.eg.db)
@@ -188,11 +185,17 @@ g_mm <- range(with(g_mm,
 g_mm <- g_mm[seqnames(g_mm) %in% "chr6" & strand(g_mm) %in% "+"]
 mm <- subsetByOverlaps(mm, expandGR(g_mm, ext=1000000))
 
-# use parallel computing to speed up.
-library(BiocParallel)
-bpparam <- MulticoreParam(tasks=200, progressbar=TRUE)
-aln_hs <- alignmentOne(seqEN, hs, bpparam=bpparam)
-aln_mm <- alignmentOne(seqEN, mm, bpparam=bpparam)
+# search the binding pattern
+data(motifs)
+## In the package, there are 10 sets of motif cluster sets.
+## In this example, we use motif clusters merged by distance 60, which 
+## is calculated by matalgin (motifStack implementation)
+PWMs <- motifs[["dist60"]]
+aln_hs <- searchTFBPS(seqEN, hs, PWMs = PWMs,
+                      queryGenome = Drerio)
+aln_mm <- searchTFBPS(seqEN, mm, PWMs = PWMs,
+                      queryGenome = Drerio)
+## if you want to stick to sequence similarity search, try to use ?alignmentOne
 ```
 
 ## Step 4, filter the candidate regions.
@@ -207,13 +210,14 @@ ext <- 100000
 aln_hs <- subsetByOverlaps(aln_hs, ranges = expandGR(g_hs, ext=ext))
 ## filter by distance
 distance(aln_hs) <- distance(peaks(aln_hs), g_hs, ignore.strand=TRUE)
-aln_hs <- subset(aln_hs, pval<0.05 & distance >5000)
-
+aln_hs <- subset(aln_hs, pval<0.1 & distance >5000)
+aln_hs
 
 aln_mm <- subsetByOverlaps(aln_mm, ranges = expandGR(g_mm, ext=ext))
 ## filter by distance
 distance(aln_mm) <- distance(peaks(aln_mm), g_mm, ignore.strand=TRUE)
-aln_mm <- subset(aln_mm, pval<0.05 & distance >5000)
+aln_mm <- subset(aln_mm, pval<0.1 & distance >5000)
+aln_mm
 ```
 
 ## Step 5, export the multiple alignments in order.
@@ -232,6 +236,13 @@ consensus <- DNAStringSet(gsub("\\?", "N", consensus))
 tmpfolder <- tempdir()
 saveAlignments(al, output_folder = tmpfolder, motifConsensus=consensus)
 readLines(file.path(tmpfolder, "aln1.phylip.txt"))
+```
+
+
+## Step 6, check the conserved motifs in the orthologs
+
+```{r}
+conservedMotifs(al[[i]], aln_hs, aln_mm, PWMs, Drerio)
 ```
 ## Session info
 
