--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 # Change in 1.3.1
 
+  o Add suport for multiple alignment for alignment function.
+
+# Change in 1.3.1
+
   o Add suport for import GRanges directly for getENCODEdata.
 
 # Change in 1.1.1
