--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
+# Change in 1.3.2
+
+  o Add support for multiple alignment for alignment function.
+  o Add support for HTML output for the alignment.
+
 # Change in 1.3.1
 
-  o Add suport for multiple alignment for alignment function.
-
-# Change in 1.3.1
-
-  o Add suport for import GRanges directly for getENCODEdata.
+  o Add support for import GRanges directly for getENCODEdata.
 
 # Change in 1.1.1
 
