--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Change in 1.3.3
+
+  o Add reverseComplement for conservedMotifs search.
+
 # Change in 1.3.2
 
   o Add support for multiple alignment for alignment function.
