--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Change in 1.3.4
+
+  o Improve the speed for searchTFBP.
+
 # Change in 1.3.3
 
   o Add reverseComplement for conservedMotifs search.
