--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Change in 1.5.1
+
+  o Remove stdout, stderr, cout, cerr, rand from source.
+
 # Change in 1.3.4
 
   o Improve the speed for searchTFBP.
