--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Change in 1.5.3
+
+  o Fix an stderr.
+
 # Change in 1.5.2
 
   o try to fix the ambiguous `byte` reference by rename `byte` to `BYTE_8t`
