Fix the the potential issue for subset function by initial distance to NULL.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Change in 1.8.1
+
+  o Fix the the potential issue for subset function by initial distance to NULL.
+
 # Change in 1.7.1
 
   o Fix an issue for conflict constant INFINITY defineed in the system/math.h.
