--- a/vignettes/enhancerHomologSearch.Rmd
+++ b/vignettes/enhancerHomologSearch.Rmd
@@ -31,6 +31,7 @@ suppressPackageStartupMessages({
   library(motifmatchr)
 })
 pval <- NULL
+distance <- NULL
 knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
 
