--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Change in 1.9.2
+
+  o Import method subset from S4Vectors.
+
 # Change in 1.9.1
 
   o Fix the the potential issue for subset function by initial distance to NULL.
